<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity"
    android:padding="@dimen/small_container_padding">

    <!-- Volume -->
    <EditText
        android:id="@+id/volume_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/volume_button"
        android:hint="@string/volume_hint"
        android:inputType="number"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/volume_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/volume_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/set_volume_bt"/>

    <!-- Lines -->
    <EditText
        android:id="@+id/lines_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/volume_text"
        app:layout_constraintEnd_toStartOf="@id/lines_button"
        android:hint="@string/lines_hint"
        android:inputType="number"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/lines_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/lines_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/volume_text"
        android:text="@string/set_lines_bt"/>

    <kz.kakainchik.sportradarsample.ui.custom.VolumeControl
        android:id="@+id/volume_control"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/lines_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/large_margin"
        app:actColor="@color/purple_700"
        app:inactColor="@color/gray_400"
        app:value="60"
        app:lines="10"/>

    <TextView
        android:id="@+id/current_volume_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/volume_control"
        app:layout_constraintStart_toStartOf="@id/volume_control"
        app:layout_constraintEnd_toEndOf="@id/volume_control"
        android:text="@string/value_volume_text"/>

</androidx.constraintlayout.widget.ConstraintLayout>